--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
-      <h1 class="text-danger">Pages#demo</h1>
+      <h1 class="text-danger">App demo: bootstrap & locale</h1>
     </div>
     <p class="text-success">
-      <%= 'Find me in app/views/pages/demo.html.haml' %>
+      <%= 'Find me in app/views/demo/index.html.haml' %>
     </p>
   </div>
   <hr/>
