--- a/app/views/shared/_top_navigation.html.erb
+++ b/app/views/shared/_top_navigation.html.erb
@@ -1,38 +1,100 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-faded">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Brand</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Brand (App Home Page) -->
+    <div class="navbar-brand">
+      <%= link_to image_tag('logos/app.png', title: app_name,  size: '50x50'), root_path %>
+    </div>
+    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
     
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+
+        <!-- Working Dropdown list -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+          <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+            <span aria-hidden="true" class="fa-solid fa-folder" style="color:navy"></span>
+            <%= "Working Pages" %>
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+          <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+            <div class="dropdown-item">
+              <%#= link_to "Add Trades", trades_path, class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Trades History",  "#", class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "OHLC",  "#", class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Candlesticks Chart",  "#", class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Trades Data",  "#", class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Depth Data",  "#", class: "text-decoration-none" %>
+            </div>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
 
-      <form class="d-flex">
-        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+        <!-- Entities Dropdown list -->
+        <li class="nav-item dropdown">
+          <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+            <span aria-hidden="true" class="fa-solid fa-database" style="color:navy"></span>
+            <%= "Entities" %>
+          </a>
+          <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+            <div class="dropdown-item">
+              <%#= link_to "Coins",  coins_path, class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Coin Nicknames",  coin_nicknames_path, class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Pairs",  pairs_path, class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Pair Nicknames",  pair_nicknames_path, class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Runs",  runs_path, class: "text-decoration-none" %>
+            </div>
+        </li>
+
+        <!-- Demo Dropdown list  -->
+        <li class="nav-item dropdown">
+          <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+            <span aria-hidden="true" class="fa-solid fa-folder" style="color:navy"></span>
+            <%= "Demo Pages" %> 
+          </a>
+          <div aria-labelledby="navbarDropdown" class="dropdown-menu">
+            <div class="dropdown-item">
+              <%= link_to "App Demo", demo_path, class: "text-decoration-none", class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Public API", public_api_path, class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "Candlesticks", candlesticks_path, class: "text-decoration-none" %>
+            </div>
+            <div class="dropdown-item">
+              <%#= link_to "DDDL", dddl_path, class: "text-decoration-none" %>
+            </div>
+          </div>
+        </li>
+            <%# %h4=link_to "Public API", pages_public_api_path
+            %h4= link_to "Trade API", pages_trade_api_path
+            %h4= link_to "Charts", pages_charts_path %>
+      </ul>
     </div>
   </div>
-</nav>
+ </nav>
+      <%# %h4= link_to "Pairs", pages_pairs_path
+      %h4= link_to "Trades History", trades_index_path
+      %h4= link_to "OHLC", trades_ohlc_path
+      %h4= link_to "Candlesticks Chart", trades_candlesticks_path
+      %h4= link_to "Trades Data", pages_trades_data_path
+      %h4= link_to "Depth Data", pages_depth_data_path %>
+
