--- a/app/views/shared/_top_navigation.html.erb
+++ b/app/views/shared/_top_navigation.html.erb
@@ -74,7 +74,7 @@
               <%= link_to "App Demo", demo_path, class: "text-decoration-none", class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
-              <%#= link_to "Public API", public_api_path, class: "text-decoration-none" %>
+              <%= link_to "API Calls", api_calls_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
               <%#= link_to "Candlesticks", candlesticks_path, class: "text-decoration-none" %>
