--- a/app/views/admin/shared/_admin_top_navigation.html.erb
+++ b/app/views/admin/shared/_admin_top_navigation.html.erb
@@ -53,20 +53,20 @@
             </div>
             <div class="dropdown-divider"></div>
             <div class="dropdown-item" >
-              <%#= link_to t(Coin.model_name.human(count: 2)),  admin_coins_path, class: "text-decoration-none"  %>
+              <%= link_to t(Coin.model_name.human(count: 2)),  admin_coins_path, class: "text-decoration-none"  %>
             </div>
             <div class="dropdown-item" >
-              <%#= link_to t(CoinNickname.model_name.human(count: 2)),  admin_coin_nicknames_path, class: "text-decoration-none" %>
+              <%= link_to t(CoinNickname.model_name.human(count: 2)),  admin_coin_nicknames_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
-              <%#= link_to t(Pair.model_name.human(count: 2)), admin_pairs_path, class: "text-decoration-none"  %>
+              <%= link_to t(Pair.model_name.human(count: 2)), admin_pairs_path, class: "text-decoration-none"  %>
             </div>
              <div class="dropdown-item">
-              <%#= link_to t(PairNickname.model_name.human(count: 2)), admin_pair_nicknames_path, class: "text-decoration-none"  %>
+              <%= link_to t(PairNickname.model_name.human(count: 2)), admin_pair_nicknames_path, class: "text-decoration-none"  %>
             </div>
             <div class="dropdown-divider"></div>
             <div class="dropdown-item">
-              <%#= link_to t(Sample.model_name.human(count: 2)), admin_samples_path, class: "text-decoration-none"  %>
+              <%= link_to t(Sample.model_name.human(count: 2)), admin_samples_path, class: "text-decoration-none"  %>
             </div>
             <div class="dropdown-item">
               <%#= link_to t(:dummy), '#' %>
