--- a/app/views/shared/_top_navigation.html.erb
+++ b/app/views/shared/_top_navigation.html.erb
@@ -77,7 +77,7 @@
               <%= link_to "API Calls", api_calls_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
-              <%#= link_to "Candlesticks", candlesticks_path, class: "text-decoration-none" %>
+              <%= link_to "Candlesticks", candlesticks_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
               <%#= link_to "DDDL", dddl_path, class: "text-decoration-none" %>
