--- a/app/views/demo/candlesticks.html.erb
+++ b/app/views/demo/candlesticks.html.erb
@@ -35,13 +35,13 @@
             <% else %>
               <tr class="text-danger">
             <% end %>
-              <td><%= Time.at(kline[0]/1000).strftime('%Y-%m-%d %H:%M:%S') %></td>
+              <td><%= show_time(kline[0]/1000) %></td>
               <td><%= kline[1] %></td>
               <td><%= kline[2] %></td>
               <td><%= kline[3] %></td>
               <td><%= kline[4] %></td>
               <td><%= kline[5] %></td>
-              <td><%= Time.at(kline[6]/1000).strftime('%Y-%m-%d %H:%M:%S') %></td>
+              <td><%= show_time(kline[6]/1000) %></td>
               <td><%= kline[7] %></td>
               <td><%= kline[8] %></td>
               <td><%= kline[9]  %></td>
@@ -70,7 +70,7 @@
             <% else %>
               <tr class="text-danger">
             <% end %>
-              <td><%= Time.at(candle[0].to_i).strftime('%Y-%m-%d %H:%M:%S') %></td>
+              <td><%= show_time(candle[0].to_i) %></td>
               <td><%= candle[1].to_f %></td>
               <td><%= candle[2].to_f %></td>
               <td><%= candle[3].to_f %></td>
