--- a/app/views/shared/_top_navigation.html.erb
+++ b/app/views/shared/_top_navigation.html.erb
@@ -77,10 +77,10 @@
               <%= link_to "API Calls", api_calls_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
-              <%= link_to "Candlesticks", candlesticks_path, class: "text-decoration-none" %>
+              <%= link_to "API Candlesticks", api_candlesticks_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
-              <%= link_to "Trades", trades_path, class: "text-decoration-none" %>
+              <%= link_to "API Trades", api_trades_path, class: "text-decoration-none" %>
             </div>
           </div>
         </li>
