--- a/app/views/shared/_top_navigation.html.erb
+++ b/app/views/shared/_top_navigation.html.erb
@@ -19,7 +19,7 @@
           </a>
           <div aria-labelledby="navbarDropdown" class="dropdown-menu">
             <div class="dropdown-item">
-              <%#= link_to "Add Trades", trades_path, class: "text-decoration-none" %>
+              <%= link_to "Select Candlestick", candlesticks_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
               <%#= link_to "Trades History",  "#", class: "text-decoration-none" %>
