--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <!-- link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" -->
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
     <%= favicon_link_tag asset_path('favicon.ico'), rel: 'apple-touch-icon' %>
     <%= render 'shared/shim' %>
