--- a/app/views/demo/chart.html.erb
+++ b/app/views/demo/chart.html.erb
@@ -5,6 +5,6 @@
   <%= candlestick_chart(@binance_data) %>
   </div>
   <div>
-  <%= candlestick_chart(@cexio_data) %>
+  <%#= candlestick_chart(@cexio_data) %>
   </div>
 </div>
