--- a/app/views/shared/_top_navigation.html.erb
+++ b/app/views/shared/_top_navigation.html.erb
@@ -85,6 +85,9 @@
             <div class="dropdown-item">
               <%= link_to "Chart Demo", demo_chart_path, class: "text-decoration-none" %>
             </div>
+            <div class="dropdown-item">
+                <%= link_to "Candle Import",  "demo_import", class: "text-decoration-none" %>
+            </div>
           </div>
         </li>
             <%# %h4=link_to "Public API", pages_public_api_path
