--- a/app/views/shared/_top_navigation.html.erb
+++ b/app/views/shared/_top_navigation.html.erb
@@ -25,7 +25,7 @@
               <%= link_to "Candlestick Charts",  charts_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
-              <%#= link_to "OHLC",  "#", class: "text-decoration-none" %>
+              <%= link_to "Trades Import",  trades_import_path, class: "text-decoration-none" %>
             </div>
             <div class="dropdown-item">
               <%#= link_to "Candlesticks Chart",  "#", class: "text-decoration-none" %>
